fix on slideshow to display imgs correctly on Firefox and IE9. Changed the position of the upload image icon on editor

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -396,6 +396,22 @@ header {
 
 
 
+    /* Slideshow on editor */
+
+   .slideshow-wrapper .widget.responsiveslideshow .bk-overlay .bk-icons-bar {
+      height: 200px;
+   }
+
+   .slideshow-wrapper .widget.responsiveslideshow .bk-overlay .bk-icons-bar .icon.choose-image-icon, .bk-overlay .bk-icons-bar .icon.choose-image-collection-icon {
+      background-position: center bottom;
+   }
+
+   .slideshow-wrapper .widget.responsiveslideshow .bk-overlay .bk-icons-bar .icon {
+    height: 180px;
+   }
+
+    /**/
+
 
     .slideshow-wrapper {
       position: relative;
@@ -410,6 +426,8 @@ header {
 
     .slideshow-wrapper .widget.responsiveslideshow .slideshow-image {
       -webkit-transform: none;
+      transform: none;
+      -ms-transform: none;
       top: 0;
       left: 0;
 
